# rumble-ai

./: .gitignore  PERF_BASELINE.md  README.md  bench.py  bench_tts.py  chat.py  client.py  fish_s2_pro_modal.py  main.py  omnivoice_modal.py  pyproject.toml  qwen3_tts_modal.py  say.py  web.py
app/: __init__.py  main.py
app/api/: __init__.py  router.py  schemas.py
app/cli/: __init__.py  chat.py  say.py
app/core/: __init__.py  clauses.py  client.py  config.py  dialogue.py  llm.py  pipeline.py  settings.py  speech.py  stt.py  text_chunks.py  tts.py
docs/: fish-cold-start.md  fish-speech-s2-pro-cold-start.md  llm-finetune-tinker.md  modal-serving-notes.md  omnivoice-bench.md  perf-baseline.md  stt-options.md  tts-options-research.md  tts-options.md
llm/: README.md  qwen3_5_4b.py
samples/: MANIFEST.txt
stt/: README.md  qwen3_asr.py
tts/: fish_s2_pro.py  omnivoice.py  qwen3.py
web/: index.html
