[project]
name = "rumble-ai"
version = "0.1.0"
description = "Self-hosted voice pipeline (STT -> LLM -> TTS) served on Modal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "modal>=1.5.0",
    "httpx>=0.28",
    "fastapi[standard]>=0.135",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
]
